remove lines without p tag

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Hello!!</title>
 </head>
 <body>
-    Hello, world!!
-    My name is Khalid
-    This is CS50w
-    thats it
-    add 1
+    <p>Hello, world!!</p>
 </body>
 </html>
